// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin-approvals AdminApprovals should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <h3
        class="title is-3"
        id=""
      >
        App Revision Approvals
      </h3>
      <div
        class="notification helper-wrap helper-info"
      >
        There are no updates that require approval
      </div>
      <h1
        class="el-title"
      >
         Consents
      </h1>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <h3
      class="title is-3"
      id=""
    >
      App Revision Approvals
    </h3>
    <div
      class="notification helper-wrap helper-info"
    >
      There are no updates that require approval
    </div>
    <h1
      class="el-title"
    >
       Consents
    </h1>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`admin-approvals Content should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        style="overflow: scroll;"
      >
        <table
          class="table is-striped is-fullwidth "
          role="table"
        >
          <thead>
            <tr
              role="row"
            >
              <th
                colspan="1"
                role="columnheader"
              >
                AppId
              </th>
              <th
                colspan="1"
                role="columnheader"
              >
                Type
              </th>
              <th
                colspan="1"
                role="columnheader"
              >
                Description
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              role="row"
            >
              <td
                role="cell"
              >
                ddc8b25e-42a2-468e-aa8f-4091eee6958f
              </td>
              <td
                role="cell"
              >
                App Revision
              </td>
              <td
                role="cell"
              >
                A developer has submitted a request to modify their application
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                role="cell"
              >
                c9cbb8cd-74c3-4cc7-b632-d8e86b0b7d26
              </td>
              <td
                role="cell"
              >
                App Revision
              </td>
              <td
                role="cell"
              >
                A developer has submitted a request to modify their application
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                role="cell"
              >
                bbd8ed62-64a5-4bb9-a269-7aa987923897
              </td>
              <td
                role="cell"
              >
                App Revision
              </td>
              <td
                role="cell"
              >
                A developer has submitted a request to modify their application
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                role="cell"
              >
                38c30c86-984f-4e20-8133-93c42f69a283
              </td>
              <td
                role="cell"
              >
                App Revision
              </td>
              <td
                role="cell"
              >
                A developer has submitted a request to modify their application
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                role="cell"
              >
                b50fe8e3-0195-4ce5-9150-d6b6250aa93f
              </td>
              <td
                role="cell"
              >
                App Revision
              </td>
              <td
                role="cell"
              >
                A developer has submitted a request to modify their application
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                role="cell"
              >
                ce069a76-6be1-4640-b412-b3c2a1e80dff
              </td>
              <td
                role="cell"
              >
                App Revision
              </td>
              <td
                role="cell"
              >
                A developer has submitted a request to modify their application
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                role="cell"
              >
                e5854bf2-8a2b-4d41-b51b-c226dbac3ffb
              </td>
              <td
                role="cell"
              >
                App Revision
              </td>
              <td
                role="cell"
              >
                A developer has submitted a request to modify their application
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                role="cell"
              >
                2421665e-7154-4bf7-bf7b-ad80bc7ed191
              </td>
              <td
                role="cell"
              >
                App Revision
              </td>
              <td
                role="cell"
              >
                A developer has submitted a request to modify their application
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                role="cell"
              >
                2baf738b-ab70-4de2-8a62-547a5ff68866
              </td>
              <td
                role="cell"
              >
                App Revision
              </td>
              <td
                role="cell"
              >
                A developer has submitted a request to modify their application
              </td>
            </tr>
            <tr
              class=""
              role="row"
            >
              <td
                role="cell"
              >
                d36137d1-cc86-4b9a-a164-069183065f37
              </td>
              <td
                role="cell"
              >
                App Revision
              </td>
              <td
                role="cell"
              >
                A developer has submitted a request to modify their application
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      style="overflow: scroll;"
    >
      <table
        class="table is-striped is-fullwidth "
        role="table"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              colspan="1"
              role="columnheader"
            >
              AppId
            </th>
            <th
              colspan="1"
              role="columnheader"
            >
              Type
            </th>
            <th
              colspan="1"
              role="columnheader"
            >
              Description
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class=""
            role="row"
          >
            <td
              role="cell"
            >
              ddc8b25e-42a2-468e-aa8f-4091eee6958f
            </td>
            <td
              role="cell"
            >
              App Revision
            </td>
            <td
              role="cell"
            >
              A developer has submitted a request to modify their application
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              role="cell"
            >
              c9cbb8cd-74c3-4cc7-b632-d8e86b0b7d26
            </td>
            <td
              role="cell"
            >
              App Revision
            </td>
            <td
              role="cell"
            >
              A developer has submitted a request to modify their application
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              role="cell"
            >
              bbd8ed62-64a5-4bb9-a269-7aa987923897
            </td>
            <td
              role="cell"
            >
              App Revision
            </td>
            <td
              role="cell"
            >
              A developer has submitted a request to modify their application
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              role="cell"
            >
              38c30c86-984f-4e20-8133-93c42f69a283
            </td>
            <td
              role="cell"
            >
              App Revision
            </td>
            <td
              role="cell"
            >
              A developer has submitted a request to modify their application
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              role="cell"
            >
              b50fe8e3-0195-4ce5-9150-d6b6250aa93f
            </td>
            <td
              role="cell"
            >
              App Revision
            </td>
            <td
              role="cell"
            >
              A developer has submitted a request to modify their application
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              role="cell"
            >
              ce069a76-6be1-4640-b412-b3c2a1e80dff
            </td>
            <td
              role="cell"
            >
              App Revision
            </td>
            <td
              role="cell"
            >
              A developer has submitted a request to modify their application
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              role="cell"
            >
              e5854bf2-8a2b-4d41-b51b-c226dbac3ffb
            </td>
            <td
              role="cell"
            >
              App Revision
            </td>
            <td
              role="cell"
            >
              A developer has submitted a request to modify their application
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              role="cell"
            >
              2421665e-7154-4bf7-bf7b-ad80bc7ed191
            </td>
            <td
              role="cell"
            >
              App Revision
            </td>
            <td
              role="cell"
            >
              A developer has submitted a request to modify their application
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              role="cell"
            >
              2baf738b-ab70-4de2-8a62-547a5ff68866
            </td>
            <td
              role="cell"
            >
              App Revision
            </td>
            <td
              role="cell"
            >
              A developer has submitted a request to modify their application
            </td>
          </tr>
          <tr
            class=""
            role="row"
          >
            <td
              role="cell"
            >
              d36137d1-cc86-4b9a-a164-069183065f37
            </td>
            <td
              role="cell"
            >
              App Revision
            </td>
            <td
              role="cell"
            >
              A developer has submitted a request to modify their application
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`admin-approvals Content should match snapshot 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="pin absolute flex items-center justify-center"
      >
        <div
          class="loader-spinner body"
          data-test=""
        >
          <div />
          <div />
          <div />
          <div />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="pin absolute flex items-center justify-center"
    >
      <div
        class="loader-spinner body"
        data-test=""
      >
        <div />
        <div />
        <div />
        <div />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`admin-approvals renderId should renderId correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`admin-approvals renderId should renderId correctly 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`admin-approvals renderViewDetailButton should render correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div />
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
